# api/swagger/swagger.yaml
@@ -148,6 +148,26 @@ paths:
 
   /backoffice/users:
     x-swagger-router-controller: backoffice
+    get:
+      description: Create user
+      security:
+        - BackofficeAuthToken: []
+      operationId: backofficeGetUsers
+      responses:
+        '201':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/userResponse"
+        '400':
+          description: Validation errors
+          schema:
+            $ref: '#/definitions/validationError'
+        '403':
+          description: Authentication error
+          schema:
+            $ref: "#/definitions/error"
     post:
       description: Create user
       security:
@@ -178,12 +198,8 @@ paths:
       description: Get user
       security:
         - BackofficeAuthToken: []
-      operationId: backofficeGetUser
+      operationId: backofficeGetUserById
       parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: "#/definitions/userRequestBody"
         - name: userId
           in: path
           description: 'ID of the user'
@@ -210,6 +226,10 @@ paths:
         - BackofficeAuthToken: []
       operationId: backofficePutUser
       parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/userRequestBody"
         - name: userId
           in: path
           description: 'ID of the user'
@@ -309,8 +329,12 @@ definitions:
   datapoint:
     type: object
     properties:
-      time:
-        $ref: "#/definitions/date" 
+      discret_time:
+        type: number
+        example: 1215
+      date:
+        type: string
+        example: '2020-02-02'
       latitude:
         type: number
         example: 45.123123
@@ -352,7 +376,8 @@ definitions:
     allOf:
       - $ref: "#/definitions/datapoint"
     required:
-      - time
+      - discret_time
+      - date
       - latitude
       - longitude
       - symptom_scores
